@@ -1,5 +1,6 @@
 0.32
  - Improve doc comments.
+ - Improve Wikibase::Datatype::Utils SEE ALSO section in doc.
  - Update Module::Install to 1.21.
 
 0.31 2023-04-27T15:00:16+02:00
